--- a/index.html
+++ b/index.html
@@ -8,6 +8,24 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
+    <header></header>
+    <main>
+        <section class="game">
+            <div class="score">
+                <div class="player-score">
+                    <h2>player</h2>
+                    <p>0</p>
+                </div>
+                <div class="computer-score">
+                    <h2>computer</h2>
+                    <p></p>
+                </div>
+            </div>
+
+            
+        </section>
+    </main>
+    <footer></footer>
     
     <script src="assets/js/script.css"></script>
 </body>
