--- a/index.html
+++ b/index.html
@@ -22,7 +22,18 @@
                 </div>
             </div>
 
-            
+            <div class="intro">
+                <h1>Rock paper scissors</h1>
+                <button> Lets Play</button>
+            </div>
+
+            <div class="match">
+                <h2 class="winner"></h2>
+                <div class="hands">
+                    
+                </div>
+            </div>
+
         </section>
     </main>
     <footer></footer>
