--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
             <div class="match">
                 <h2 class="winner"></h2>
                 <div class="hands">
-                    
+                    <img class = "player-hand" src="assets/images/rock.png" alt= "">
+                    <img class = "computer-hand" src="assets/images/rock.png" alt=""
                 </div>
             </div>
 
