--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 </div>
                 <div class="computer-score">
                     <h2>computer</h2>
-                    <p></p>
+                    <p>0</p>
                 </div>
             </div>
 
@@ -31,7 +31,12 @@
                 <h2 class="winner"></h2>
                 <div class="hands">
                     <img class = "player-hand" src="assets/images/rock.png" alt= "">
-                    <img class = "computer-hand" src="assets/images/rock.png" alt=""
+                    <img class = "computer-hand" src="assets/images/rock.png" alt="">
+                </div>
+                <div class="options">
+                    <button class="rock">rock</button>
+                    <button class="scissor">scissors</button>
+                    <button class="paper">paper</button>
                 </div>
             </div>
 
