--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </div>
 
             <div class="match">
-                <h2 class="winner"></h2>
+                <h2 class="winner">Choose an option</h2>
                 <div class="hands">
                     <img class = "player-hand" src="assets/images/rock.png" alt= "">
                     <img class = "computer-hand" src="assets/images/rock.png" alt="">
