set up structure of game functions

--- a/index.html
+++ b/index.html
@@ -22,21 +22,21 @@
                 </div>
             </div>
 
-            <div class="intro">
+            <div id="intro">
                 <h1>Rock paper scissors</h1>
                 <button> Lets Play</button>
             </div>
 
-            <div class="match">
-                <h2 class="winner">Choose an option</h2>
-                <div class="hands">
-                    <img class = "player-hand" src="assets/images/rock.png" alt= "">
-                    <img class = "computer-hand" src="assets/images/rock.png" alt="">
+            <div id="match ">
+                <h2 id="winner">Choose an option</h2>
+                <div id="hands">
+                    <img id = "player-hand" src="assets/images/rock.png" alt= "">
+                    <img id = "computer-hand" src="assets/images/rock.png" alt="">
                 </div>
                 <div class="options">
-                    <button class="rock">rock</button>
-                    <button class="scissor">scissors</button>
-                    <button class="paper">paper</button>
+                    <button className="button" id="rock">rock</button>
+                    <button className="button" id="scissor">scissors</button>
+                    <button className="button" id="paper">paper</button>
                 </div>
             </div>
 
