--- a/index.html
+++ b/index.html
@@ -12,21 +12,21 @@
         <h1> Rock Paper Scissors</h1>
     </header>
     <main>
+        <br>
         <section id="game">
             <div id="score">
-                <div id="player-score" class="scoreNames">
-                    <h2>player</h2>
-                    <p>0</p>
+                <div>
+                    <h2 id="playeridentfier" class="scorenames">player</h2>
+                    <p id="playerscore" class="scorenames">0</p>
                 </div>
-                <div id="computer-score"class="scoreNames">
-                    <h2>computer</h2>
-                    <p>0</p>
+                <div>
+                    <h2 id="computeridentfier" class="scorenames">computer</h2>
+                    <p id="computerscore" class="scorenames">0</p>
                 </div>
-                <div id="lifes">
-                    <h2>lifes</h2>
-                    <p>0</p>
-                </div>
-                </div>
+            </div>
+            <div id="lifes">
+                <h2>lifes</h2>
+                <p>0</p>
             </div>
 
             <div id="intro">
