fixed button for intro screen

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <img id = "computer-hand" src="assets/images/rock.png" alt="">
                 </div>
                 <div class="options">
-                    <button class="button" type="submit" id="rock"><img src="assets/images/rock.png"/><a href="https://www.w3schools.com/jsref/event_animationend.asp"></a></button>
+                    <button class="button" id="rock">rock</button>
                     <button class="button" id="scissor">scissors</button>
                     <button class="button" id="paper">paper</button>
                 </div>
