--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
                     <img id = "computer-hand" src="assets/images/rock.png" alt="">
                 </div>
                 <div class="options">
-                    <button class="button" id="rock">rock</button>
-                    <button class="button" id="scissor">scissors</button>
-                    <button class="button" id="paper">paper</button>
+                    <button class="button" id="rock"><img src="assets/images/rock.png"/></button>
+                    <button class="button" id="scissor"><img src="assets/images/scissors.jpg"/></button>
+                    <button class="button" id="paper"><img src="assets/images/paper.png"/></button>
                 </div>
             </div>
 
