--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,22 +8,22 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Rock Paper Scissors</title>
 </head>
+
 <body>
     <header>
         <h1> Rock Paper Scissors</h1>
     </header>
     <main>
-        <br>
         <section id="game">
             <div id="score">
                 <div class="scoreboard">
                     <span>
-                    <h2 id="playeridentfier" class="scorenames">player</h2>
-                    <p id="playerscore" class="scorenames">0</p>
+                        <h2 id="playeridentfier" class="scorenames">player</h2>
+                        <p id="playerscore" class="scorenames">0</p>
                     </span>
                     <span>
-                     <h2 id="computeridentfier" class="scorenames">computer</h2>
-                    <p id="computerscore" class="scorenames">0</p>
+                        <h2 id="computeridentfier" class="scorenames">computer</h2>
+                        <p id="computerscore" class="scorenames">0</p>
                     </span>
                 </div>
             </div>
@@ -37,23 +38,31 @@
             </div>
 
             <div id="match">
-                <h2 id="winner">Choose an option</h2>
+                <h2 id="winner">Choose your DOOM</h2>
+
                 <div id="hands">
-                    <img id = "player-hand" src="assets/images/rock.png" alt= "">
-                    <img id = "computer-hand" src="assets/images/rock.png" alt="">
+                    <img id="player-hand" src="assets/images/rock.png" alt="">
+                    <img id="computer-hand" src="assets/images/rock.png" alt="">
                 </div>
                 <div class="options">
-                    <button class="button" id="rock"><img src="assets/images/rock.png"/></button>
-                    <button class="button" id="scissor"><img src="assets/images/scissors.jpg"/></button>
-                    <button class="button" id="paper"><img src="assets/images/paper.png"/></button>
+                    <button class="button" id="rock"><img src="assets/images/rock.png" /></button>
+                    <button class="button" id="scissor"><img src="assets/images/scissors.jpg" /></button>
+                    <button class="button" id="paper"><img src="assets/images/paper.png" /></button>
+                </div>
+                <div id="results">
+                    <p>paper covers rock you win</p>
                 </div>
             </div>
 
 
         </section>
     </main>
-    <footer></footer>
-    
+
+    <footer>
+
+    </footer>
+
     <script src="assets/js/script.js"></script>
 </body>
+
 </html>
