basic game frame work added to javascript file

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 </div>
                 <div class="options">
                     <button class="button" id="rock"><img src="assets/images/rock.png" /></button>
-                    <button class="button" id="scissor"><img src="assets/images/scissors.jpg" /></button>
+                    <button class="button" id="scissors"><img src="assets/images/scissors.jpg" /></button>
                     <button class="button" id="paper"><img src="assets/images/paper.png" /></button>
                 </div>
                 <div id="results">
