--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
                 <div class="options">
                     <button class="button" id="rock"><img src="assets/images/rock.png" /></button>
                     <button class="button" id="scissors"><img src="assets/images/scissors.jpg" /></button>
-                    <button class="button" id="paper"><img src="assets/images/paper.png" /></button>
+                    <button class="button" onclick="changeImage()" id="paper"><img src="assets/images/paper.png" /></button>
                 </div>
-                <div id="results">
+                <div class="results">
                     <p>paper covers rock you win</p>
                 </div>
             </div>
