--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
                     <img id="computer-hand" src="assets/images/rock.png" alt="">
                 </div>
                 <div class="options">
-                    <button class="button" id="rock"><img src="assets/images/rock.png" /></button>
-                    <button class="button" id="scissors"><img src="assets/images/scissors.jpg" /></button>
-                    <button class="button" onclick="changeImage()" id="paper"><img src="assets/images/paper.png" /></button>
+                    <button class="button" onclick="changeImage('assets/images/rock.png')"id="rock"><img src="assets/images/rock.png" /></button>
+                    <button class="button" onclick="changeImage('assets/images/scissors.jpg')" id="scissors"><img src="assets/images/scissors.jpg" /></button>
+                    <button class="button" onclick="changeImage('assets/images/paper.png')" id="paper"><img src="assets/images/paper.png" /></button>
                 </div>
                 <div class="results">
                     <p>paper covers rock you win</p>
