--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
                 <h2 id="winner">Choose your DOOM</h2>
 
                 <div id="hands">
-                    <img id="player-hand" src="assets/images/rock.png" alt="">
-                    <img id="computer-hand" src="assets/images/rock.png" alt="">
+                    <img id="player-hand" src="assets/images/rock.png" alt="players choice, picture of a rock , paper or scissors">
+                    <img id="computer-hand" src="assets/images/rock.png" alt="Computers choice, picture of a rock , paper or scissors">
                 </div>
                 <div class="options">
-                    <button class="button" onclick="changeImage('assets/images/rock.png')"id="rock"><img src="assets/images/rock.png" /></button>
-                    <button class="button" onclick="changeImage('assets/images/scissors.jpg')" id="scissors"><img src="assets/images/scissors.jpg" /></button>
-                    <button class="button" onclick="changeImage('assets/images/paper.png')" id="paper"><img src="assets/images/paper.png" /></button>
+                    <span class="button" id="rock"><img src="assets/images/rock.png" /></span>
+                    <span class="button"  id="scissors"><img src="assets/images/scissors.jpg" /></span>
+                    <span class="button"  id="paper"><img src="assets/images/paper.png" /></span>
                 </div>
                 <div class="results">
                     <p>paper covers rock you win</p>
