--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 </div>
                 <div class="options">
                     <span class="button" id="rock"><img src="assets/images/rock.png" /></span>
-                    <span class="button"  id="scissors"><img src="assets/images/scissors.jpg" /></span>
+                    <span class="button"  id="scissors"><img src="assets/images/scissors.png" /></span>
                     <span class="button"  id="paper"><img src="assets/images/paper.png" /></span>
                 </div>
                 <div class="results">
