styled a reset button

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="rock, paper, scissors, sores, javascript">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Rock Paper Scissors</title>
 </head>
@@ -17,14 +18,14 @@
         <section id="game">
             <div id="score">
                 <div class="scoreboard">
-                    <span>
+                    <div>
                         <h2 id="playeridentfier" class="scorenames">player</h2>
                         <p id="playerscore" class="scorenames">0</p>
-                    </span>
-                    <span>
+                    </div>
+                    <div>
                         <h2 id="computeridentfier" class="scorenames">computer</h2>
                         <p id="computerscore" class="scorenames">0</p>
-                    </span>
+                    </div>
                 </div>
             </div>
             <div id="lifes">
@@ -45,15 +46,17 @@
                     <img id="computer-hand" src="assets/images/rock.png" alt="Computers choice, picture of a rock , paper or scissors">
                 </div>
                 <div class="options">
-                    <span class="button" id="rock"><img src="assets/images/rock.png" /></span>
-                    <span class="button"  id="scissors"><img src="assets/images/scissors.png" /></span>
-                    <span class="button"  id="paper"><img src="assets/images/paper.png" /></span>
+                    <span class="button" id="rock" ><img src="assets/images/rock.png" alt="picture of a rock for the player to choose"/></span>
+                    <span class="button"  id="scissors" ><img src="assets/images/scissors.png" alt="picture of scissors for the player to choose"/></span>
+                    <span class="button"  id="paper" ><img src="assets/images/paper.png" alt="picture of paper for the player to choose"/></span>
                 </div>
                 <div class="results">
                     <p>paper covers rock you win</p>
                 </div>
+                <div>
+                    <button id="reset" type="reset">Reset</button>
+                </div>
             </div>
-
 
         </section>
     </main>
