added game rules to the footer

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h1> Rock Paper Scissors</h1>
     </header>
     <main>
-        <section id="game">
+        <section>
             <div id="score">
                 <div class="scoreboard">
                     <div>
@@ -28,11 +28,6 @@
                     </div>
                 </div>
             </div>
-            <div id="lifes">
-                <h2>lifes</h2>
-                <p>0</p>
-            </div>
-
             <div id="intro">
                 <h1>Rock paper scissors</h1>
                 <button class='play' id="play"> Lets Play</button>
@@ -61,8 +56,9 @@
         </section>
     </main>
 
-    <footer>
-
+    <footer id="rules">
+        <h2>RULES</h2>
+        <p>paper covers rock¦ scissors cut paper¦ rock smashes scissors</p>
     </footer>
 
     <script src="assets/js/script.js"></script>
