added media quiry for smartphones

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
             <div id="score">
                 <div class="scoreboard">
                     <div>
-                        <h2 id="playeridentfier" class="scorenames">player</h2>
+                        <h2 id="playeridentfier" class="scorenames">Player</h2>
                         <p id="playerscore" class="scorenames">0</p>
                     </div>
                     <div>
-                        <h2 id="computeridentfier" class="scorenames">computer</h2>
+                        <h2 id="computeridentfier" class="scorenames">Computer</h2>
                         <p id="computerscore" class="scorenames">0</p>
                     </div>
                 </div>
