added who one logic to the game

--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
                 </div>
             </div>
             <div id="intro">
-                <h1>Rock paper scissors</h1>
+                <h2>Rock paper scissors</h2>
                 <button class='play' id="play"> Lets Play</button>
             </div>
 
             <div id="match">
-                <h2 id="winner">Choose your DOOM</h2>
+                <h2 id="winner">Choose your DOOM!!</h2>
 
                 <div id="hands">
                     <img id="player-hand" src="assets/images/rock.png" alt="players choice, picture of a rock , paper or scissors">
@@ -58,7 +58,9 @@
 
     <footer id="rules">
         <h2>RULES</h2>
-        <p>paper covers rock¦ scissors cut paper¦ rock smashes scissors</p>
+        <p>Paper covers rock¦ scissors cut paper¦ rock smashes scissors</p>
+        <br>
+        <p>Winner is first to five</p>
     </footer>
 
     <script src="assets/js/script.js"></script>
