added a pop out window for rules of the game

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </div>
             </div>
             <div id="intro">
-                <h2>Rock paper scissors</h2>
+                <h2>Rock Paper Scissors</h2>
                 <button class='play' id="play"> Lets Play</button>
             </div>
 
@@ -46,10 +46,16 @@
                     <span class="button"  id="paper" ><img src="assets/images/paper.png" alt="picture of paper for the player to choose"/></span>
                 </div>
                 <div class="results">
-                    <p>paper covers rock you win</p>
+                    <p></p>
+                    <button class='model-btn'>rules</button>
                 </div>
-                <div>
-                    <button id="reset" type="reset">Reset</button>
+                <div class='model-bg'>
+                    <div class="modal">
+                        <h2>RULES</h2>
+                        <p>Paper covers rock¦ scissors cut paper¦ rock smashes scissors</p>
+                        <p>Winner is first to five</p>
+                        <button class="close">close</button>
+                    </div>
                 </div>
             </div>
 
@@ -57,10 +63,7 @@
     </main>
 
     <footer id="rules">
-        <h2>RULES</h2>
-        <p>Paper covers rock¦ scissors cut paper¦ rock smashes scissors</p>
-        <br>
-        <p>Winner is first to five</p>
+        
     </footer>
 
     <script src="assets/js/script.js"></script>
