cleaned up the game so it looks better

--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
         <section>
             <div>
                 <div class='rules-btn'><i class="far fa-question-circle"></i></div>
-                    <div class='rules-bg'>
-                        <div class="rules">
-                            <h2>RULES</h2>
-                            <p>Paper covers rock¦ scissors cut paper¦ rock smashes scissors</p>
-                            <p>Winner is first to five</p>
-                            <button class="close">close</button>
-                        </div>
+                <div class='rules-bg'>
+                    <div class="rules">
+                        <h2>RULES</h2>
+                        <p>Paper covers rock¦ scissors cut paper¦ rock smashes scissors</p>
+                        <p>Winner is first to five</p>
+                        <button class="close">close</button>
                     </div>
+                </div>
             </div>
             <div id="score">
                 <div class="scoreboard">
@@ -46,32 +46,38 @@
             </div>
 
             <div id="match">
-                <h2 id="winner">Choose your DOOM!!</h2>
+                <div class="results">
+                    <p></p>
 
+                </div>
                 <div id="hands">
-                    <img id="player-hand" src="assets/images/rock.png" alt="players choice, picture of a rock , paper, scissors, lizard and spock">
-                    <img id="computer-hand" src="assets/images/rock.png" alt="Computers choice, picture of a rock , paper, scissors, lizard and spock">
+                    <img id="player-hand" src="assets/images/rock.png"
+                        alt="players choice, picture of a rock , paper, scissors, lizard and spock">
+                    <img id="computer-hand" src="assets/images/rock.png"
+                        alt="Computers choice, picture of a rock , paper, scissors, lizard and spock">
                 </div>
                 <div class="options">
-                    <span class="button" id="rock" ><img src="assets/images/rock.png" alt="picture of a rock for the player to choose"/></span>
-                    <span class="button"  id="scissors" ><img src="assets/images/scissors.png" alt="picture of scissors for the player to choose"/></span>
-                    <span class="button"  id="paper" ><img src="assets/images/paper.png" alt="picture of paper for the player to choose"/></span>
-                    <span class="button"  id="lizard" ><img src="assets/images/lizard.png" alt="picture of a lizard for the player to choose"/></span>
-                    <span class="button"  id="spock" ><img src="assets/images/spock.png" alt="picture of spock symbol for the player to choose"/></span> 
+                    <span class="button" id="rock"><img src="assets/images/rock.png"
+                            alt="picture of a rock for the player to choose" /></span>
+                    <span class="button" id="scissors"><img src="assets/images/scissors.png"
+                            alt="picture of scissors for the player to choose" /></span>
+                    <span class="button" id="paper"><img src="assets/images/paper.png"
+                            alt="picture of paper for the player to choose" /></span>
+                    <span class="button" id="lizard"><img src="assets/images/lizard.png"
+                            alt="picture of a lizard for the player to choose" /></span>
+                    <span class="button" id="spock"><img src="assets/images/spock.png"
+                            alt="picture of spock symbol for the player to choose" /></span>
                 </div>
                 <div class="results">
                     <p></p>
 
                 </div>
-
-                </div>
             </div>
-
         </section>
     </main>
 
     <footer>
-        
+
     </footer>
 
     <script src="assets/js/script.js"></script>
