added to the meta discription and clened up the css

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="rock, paper, scissors, scores, javascript">
+    <meta name="description" content="rock, paper, scissors, scores, lizard, spock javascript">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Rock Paper Scissors</title>
@@ -13,12 +13,12 @@
 
 <body>
     <header>
-        <h1> Rock Paper Scissors</h1>
+        <h1> Rock Paper Scissors Lizard Spock</h1>
     </header>
     <main>
         <section>
             <div>
-                <div class='rules-btn'><i class="far fa-question-circle"></i></div>
+               <div class='rules-btn'><i class="far fa-question-circle"></i></div>
                 <div class='rules-bg'>
                     <div class="rules">
                         <h2>RULES</h2>
@@ -41,7 +41,7 @@
                 </div>
             </div>
             <div id="intro">
-                <h2>Rock Paper Scissors</h2>
+                <h2>Rock Paper Scissors Lizard Spock</h2>
                 <button class='play' id="play"> Lets Play</button>
             </div>
 
