added media quires for tablets and bigger screens

--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
                 <div class='rules-bg'>
                     <div class="rules">
                         <h2>RULES</h2>
-                        <p>Paper covers rock¦ scissors cut paper¦ rock smashes scissors</p>
+                        <p>Scissors cuts Paper¦ Paper covers Rock¦ Rock crushes Lizard¦ Lizard poisons Spock¦<br>
+                            Spock smashes Scissors¦ Scissors decapitates Lizard¦ Lizard eats Paper¦<br>
+                            Paper disproves Spock¦Spock vaporizes Rock¦ Rock crushes Scissors</p>
                         <p>Winner is first to five</p>
                         <button class="close">close</button>
                     </div>
