removed css that was unnecessary

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!--start of projects HTML-->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -12,12 +13,14 @@
 </head>
 
 <body>
+    <!-- Header of the page-->
     <header>
         <h1> Rock Paper Scissors Lizard Spock</h1>
     </header>
     <main>
         <section>
             <div>
+        <!--Modal for the rules -->
                <div class='rules-btn'><i class="far fa-question-circle"></i></div>
                 <div class='rules-bg'>
                     <div class="rules">
@@ -30,6 +33,7 @@
                     </div>
                 </div>
             </div>
+        <!-- Scoreboard-->
             <div id="score">
                 <div class="scoreboard">
                     <div>
@@ -42,16 +46,18 @@
                     </div>
                 </div>
             </div>
+        <!--fading intro -->
             <div id="intro">
                 <h2>Rock Paper Scissors Lizard Spock</h2>
                 <button class='play' id="play"> Lets Play</button>
             </div>
-
+        <!-- fading in match-->
             <div id="match">
                 <div class="results">
                     <p></p>
 
                 </div>
+            <!-- allows the game to happening showing both the computer and players hand-->
                 <div id="hands">
                     <img id="player-hand" src="assets/images/rock.png"
                         alt="players choice, picture of a rock , paper, scissors, lizard and spock">
